--- a/style.css
+++ b/style.css
@@ -1,4 +1,75 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins','sans-serif';
+    font-size: 15px;
+}
+.hero{
+    width:100vw;
+    height:100vh;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
+.section-message{
+    margin-top: 15vh;
+    margin-bottom: 5vh;
+    width:85vw;
+}
+.section-message>img{
+    display: block;
+    margin:0px auto;
+}
+.section-message>h1{
+    text-align: center;
+    
+}
+.section-message>p{
+    text-align: center;
+    color: #6C727F;
+    font-weight: 00;
+}
+
+.form-section{
+    width:85vw;
+    /* border:1px solid gray; */
+    padding:1rem;
+    box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.03), 0px 8px 12px 0px rgba(0, 0, 0, 0.08);
+;
+}
+.form-section >form> input{
+    border:none;
+    width: 85vw;
+    height:3.5rem;
+    text-align: center;
+    outline: none;
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+    border:1px solid #E5E7EB;
+    padding: 0;
+    font-size: 16px;
+    color:#6C727F;
+    font-weight: 600;;
+
+}
+.form-section >form>button{
+    width:85vw;
+    height: 3.5rem;
+    border-radius: 0.5rem;
+    background-color: #284BCE;
+    color:white;
+    font-weight: 600;
+    outline:none
+}
+.form-section>p{
+    
+    font-size: 14px;
+    margin-top: 2rem;
+    color:#394150
+
+}
+button:hover{
+    box-shadow: 4px 4px 4px #6C727F;
+    cursor: pointer;
 }
