--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ body{
     border:1px solid #E5E7EB;
     padding: 0;
     font-size: 16px;
-    color:#6C727F;
-    font-weight: 600;;
+    color:#29292a;
+    font-weight: 400;;
 
 }
 .form-section >form>button{
